--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
 </body>
 
 <script>
+try {
+    var loadNotes = localStorage.getItem("notes");
+}
+catch(err) {
+    var loadNotes = "Enter your notes here and click 'Save'";
+}
+
+$("#note-area").val(loadNotes);
+
 var sp = "/";
 var today = new Date();
 var dd = today.getDate();
@@ -44,6 +53,10 @@ var yyyy = today.getFullYear();
 if(dd<10) dd='0'+dd;
 if(mm<10) mm='0'+mm;
 $("#date").html(mm+sp+dd+sp+yyyy);
+
+$("#saveNoteBtn").click(function(){
+    var currentNotes = $("#note-area").val();
+    localStorage.setItem("notes", currentNotes);
+});
 </script>
 </html>
-
